// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CLI SSH remote-state lock commands [CONFIG-FILE-STATE-018] rendered inspect script is stable 1`] = `
"    set -eu
data_root='/var/lib/appaloft/runtime/state'
data_root_json='"/var/lib/appaloft/runtime/state"'
stale_after_seconds='1200'
lock_dir="$data_root/locks/mutation.lock"
owner_file="$lock_dir/owner.json"
json_string() { if [ "$#" -eq 0 ] || [ -z "$1" ]; then printf null; return; fi; printf '"' ; printf "%s" "$1" | sed 's/\\\\/\\\\\\\\/g; s/"/\\\\"/g'; printf '"' ; }
json_number() { if [ -n "$1" ]; then printf "%s" "$1"; else printf null; fi; }
now_epoch="$(date -u +%s 2>/dev/null || date +%s)"
owner=""
correlation_id=""
started_at=""
last_heartbeat=""
recorded_stale_after=""
heartbeat_epoch=""
lock_age_seconds=""
owner_file_present=false
stale=false

    if [ ! -d "$data_root" ]; then
      printf '{"status":"missing","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s}\\n' "$data_root_json"
      exit 0
    fi
    if [ ! -d "$lock_dir" ]; then
      printf '{"status":"unlocked","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"stale":false}\\n' "$data_root_json"
      exit 0
    fi
    if [ -f "$owner_file" ]; then
      owner_file_present=true
      owner="$(sed -n 's/.*"owner"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      correlation_id="$(sed -n 's/.*"correlationId"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      started_at="$(sed -n 's/.*"startedAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      last_heartbeat="$(sed -n 's/.*"lastHeartbeatAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      recorded_stale_after="$(sed -n 's/.*"staleAfterSeconds"[[:space:]]*:[[:space:]]*\\([0-9][0-9]*\\).*/\\1/p' "$owner_file" | head -n 1 || true)"
    fi
    [ -n "$recorded_stale_after" ] || recorded_stale_after="$stale_after_seconds"
    if [ "$recorded_stale_after" -gt "$stale_after_seconds" ]; then recorded_stale_after="$stale_after_seconds"; fi
    if [ "$owner_file_present" != true ] && [ "$recorded_stale_after" -gt 30 ]; then recorded_stale_after=30; fi
    [ -n "$last_heartbeat" ] || last_heartbeat="$started_at"
    if [ -n "$last_heartbeat" ]; then
      heartbeat_epoch="$(date -u -d "$last_heartbeat" +%s 2>/dev/null || date -j -u -f "%Y-%m-%dT%H:%M:%SZ" "$last_heartbeat" +%s 2>/dev/null || true)"
    fi
    if [ -z "$heartbeat_epoch" ]; then
      heartbeat_epoch="$(stat -c %Y "$lock_dir" 2>/dev/null || stat -f %m "$lock_dir" 2>/dev/null || true)"
    fi
    if [ -n "$heartbeat_epoch" ]; then
      lock_age_seconds=$((now_epoch - heartbeat_epoch))
    fi
    if [ -n "$lock_age_seconds" ] && [ "$lock_age_seconds" -ge "$recorded_stale_after" ]; then stale=true; fi
    status=active
    if [ "$stale" = true ]; then status=stale; fi
    printf '{"status":"%s","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"lockPath":%s,"owner":%s,"correlationId":%s,"startedAt":%s,"lastHeartbeatAt":%s,"staleAfterSeconds":%s,"lockAgeSeconds":%s,"stale":%s}\\n' "$status" "$data_root_json" "$(json_string "$lock_dir")" "$(json_string "$owner")" "$(json_string "$correlation_id")" "$(json_string "$started_at")" "$(json_string "$last_heartbeat")" "$(json_number "$recorded_stale_after")" "$(json_number "$lock_age_seconds")" "$stale"
"
`;

exports[`CLI SSH remote-state lock commands [CONFIG-FILE-STATE-019] rendered recover-stale script is stable 1`] = `
"    set -eu
data_root='/var/lib/appaloft/runtime/state'
data_root_json='"/var/lib/appaloft/runtime/state"'
stale_after_seconds='1200'
lock_dir="$data_root/locks/mutation.lock"
owner_file="$lock_dir/owner.json"
json_string() { if [ "$#" -eq 0 ] || [ -z "$1" ]; then printf null; return; fi; printf '"' ; printf "%s" "$1" | sed 's/\\\\/\\\\\\\\/g; s/"/\\\\"/g'; printf '"' ; }
json_number() { if [ -n "$1" ]; then printf "%s" "$1"; else printf null; fi; }
now_epoch="$(date -u +%s 2>/dev/null || date +%s)"
owner=""
correlation_id=""
started_at=""
last_heartbeat=""
recorded_stale_after=""
heartbeat_epoch=""
lock_age_seconds=""
owner_file_present=false
stale=false

    recovered_by='appaloft-cli-test'
    now="$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
    stamp="$(date -u +"%Y-%m-%dT%H-%M-%SZ")"
    if [ ! -d "$lock_dir" ]; then
      printf '{"status":"unlocked","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"recovered":false,"stale":false}\\n' "$data_root_json"
      exit 0
    fi
    if [ -f "$owner_file" ]; then
      owner_file_present=true
      owner="$(sed -n 's/.*"owner"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      correlation_id="$(sed -n 's/.*"correlationId"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      started_at="$(sed -n 's/.*"startedAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      last_heartbeat="$(sed -n 's/.*"lastHeartbeatAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
      recorded_stale_after="$(sed -n 's/.*"staleAfterSeconds"[[:space:]]*:[[:space:]]*\\([0-9][0-9]*\\).*/\\1/p' "$owner_file" | head -n 1 || true)"
    fi
    [ -n "$recorded_stale_after" ] || recorded_stale_after="$stale_after_seconds"
    if [ "$recorded_stale_after" -gt "$stale_after_seconds" ]; then recorded_stale_after="$stale_after_seconds"; fi
    if [ "$owner_file_present" != true ] && [ "$recorded_stale_after" -gt 30 ]; then recorded_stale_after=30; fi
    [ -n "$last_heartbeat" ] || last_heartbeat="$started_at"
    if [ -n "$last_heartbeat" ]; then
      heartbeat_epoch="$(date -u -d "$last_heartbeat" +%s 2>/dev/null || date -j -u -f "%Y-%m-%dT%H:%M:%SZ" "$last_heartbeat" +%s 2>/dev/null || true)"
    fi
    if [ -z "$heartbeat_epoch" ]; then
      heartbeat_epoch="$(stat -c %Y "$lock_dir" 2>/dev/null || stat -f %m "$lock_dir" 2>/dev/null || true)"
    fi
    if [ -n "$heartbeat_epoch" ]; then
      lock_age_seconds=$((now_epoch - heartbeat_epoch))
    fi
    if [ -n "$lock_age_seconds" ] && [ "$lock_age_seconds" -ge "$recorded_stale_after" ]; then stale=true; fi
    if [ "$stale" != true ]; then
      printf '{"status":"active","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"owner":%s,"correlationId":%s,"lastHeartbeatAt":%s,"staleAfterSeconds":%s,"lockAgeSeconds":%s,"recovered":false,"stale":false}\\n' "$data_root_json" "$(json_string "$owner")" "$(json_string "$correlation_id")" "$(json_string "$last_heartbeat")" "$(json_number "$recorded_stale_after")" "$(json_number "$lock_age_seconds")"
      exit 0
    fi
    mkdir -p "$data_root/locks/recovered"
    recovered_path="$data_root/locks/recovered/manual-$stamp-$$.lock"
    if mv "$lock_dir" "$recovered_path" 2>/dev/null; then
      printf '{"phase":"remote-state-lock","recoveredAt":"%s","recoveredBy":%s,"owner":%s,"correlationId":%s,"lockAgeSeconds":%s}\\n' "$now" "$(json_string "$recovered_by")" "$(json_string "$owner")" "$(json_string "$correlation_id")" "$(json_number "$lock_age_seconds")" > "$recovered_path/recovered.json"
      printf '{"status":"recovered","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"owner":%s,"correlationId":%s,"lastHeartbeatAt":%s,"staleAfterSeconds":%s,"lockAgeSeconds":%s,"recovered":true,"recoveredPath":%s,"stale":true}\\n' "$data_root_json" "$(json_string "$owner")" "$(json_string "$correlation_id")" "$(json_string "$last_heartbeat")" "$(json_number "$recorded_stale_after")" "$(json_number "$lock_age_seconds")" "$(json_string "$recovered_path")"
    else
      printf '{"status":"race-lost","phase":"remote-state-lock","stateBackend":"ssh-pglite","dataRoot":%s,"recovered":false,"stale":true}\\n' "$data_root_json"
    fi
"
`;

exports[`CLI SSH remote-state lock commands [OP-WORK-QRY-011] rendered diagnostics script is stable 1`] = `
"    set -eu
data_root='/var/lib/appaloft/runtime/state'
data_root_json='"/var/lib/appaloft/runtime/state"'
stale_after_seconds='1200'
lock_dir="$data_root/locks/mutation.lock"
owner_file="$lock_dir/owner.json"
json_string() { if [ "$#" -eq 0 ] || [ -z "$1" ]; then printf null; return; fi; printf '"' ; printf "%s" "$1" | sed 's/\\\\/\\\\\\\\/g; s/"/\\\\"/g'; printf '"' ; }
json_number() { if [ -n "$1" ]; then printf "%s" "$1"; else printf null; fi; }
now_epoch="$(date -u +%s 2>/dev/null || date +%s)"
owner=""
correlation_id=""
started_at=""
last_heartbeat=""
recorded_stale_after=""
heartbeat_epoch=""
lock_age_seconds=""
owner_file_present=false
stale=false

    limit='20'
    emit_file() { [ -f "$1" ] || return 0; phase="$2"; step="$3"; marker_id="$4"; updated_at="$(stat -c %y "$1" 2>/dev/null || stat -f "%Sm" -t "%Y-%m-%dT%H:%M:%SZ" "$1" 2>/dev/null || date -u +"%Y-%m-%dT%H:%M:%SZ")"; printf '{"id":%s,"status":"succeeded","phase":"%s","step":"%s","updatedAt":%s,"stateBackend":"ssh-pglite"}\\n' "$(json_string "$marker_id")" "$phase" "$step" "$(json_string "$updated_at")"; }
    if [ ! -d "$data_root" ]; then
      printf '{"id":"state-root","status":"failed","phase":"remote-state-recovery","step":"missing","updatedAt":%s,"stateBackend":"ssh-pglite","dataRoot":%s,"errorCode":"remote_state_root_missing","errorCategory":"infra","retriable":true}\\n' "$(json_string "$(date -u +"%Y-%m-%dT%H:%M:%SZ")")" "$data_root_json"
      exit 0
    fi
    if [ -d "$lock_dir" ]; then
      if [ -f "$owner_file" ]; then
        owner_file_present=true
        owner="$(sed -n 's/.*"owner"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
        correlation_id="$(sed -n 's/.*"correlationId"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
        started_at="$(sed -n 's/.*"startedAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
        last_heartbeat="$(sed -n 's/.*"lastHeartbeatAt"[[:space:]]*:[[:space:]]*"\\([^"]*\\)".*/\\1/p' "$owner_file" | head -n 1 || true)"
        recorded_stale_after="$(sed -n 's/.*"staleAfterSeconds"[[:space:]]*:[[:space:]]*\\([0-9][0-9]*\\).*/\\1/p' "$owner_file" | head -n 1 || true)"
      fi
      [ -n "$recorded_stale_after" ] || recorded_stale_after="$stale_after_seconds"
      if [ "$recorded_stale_after" -gt "$stale_after_seconds" ]; then recorded_stale_after="$stale_after_seconds"; fi
      if [ "$owner_file_present" != true ] && [ "$recorded_stale_after" -gt 30 ]; then recorded_stale_after=30; fi
      [ -n "$last_heartbeat" ] || last_heartbeat="$started_at"
      if [ -n "$last_heartbeat" ]; then heartbeat_epoch="$(date -u -d "$last_heartbeat" +%s 2>/dev/null || date -j -u -f "%Y-%m-%dT%H:%M:%SZ" "$last_heartbeat" +%s 2>/dev/null || true)"; fi
      if [ -z "$heartbeat_epoch" ]; then heartbeat_epoch="$(stat -c %Y "$lock_dir" 2>/dev/null || stat -f %m "$lock_dir" 2>/dev/null || true)"; fi
      if [ -n "$heartbeat_epoch" ]; then lock_age_seconds=$((now_epoch - heartbeat_epoch)); fi
      if [ -n "$lock_age_seconds" ] && [ "$lock_age_seconds" -ge "$recorded_stale_after" ]; then stale=true; fi
      status=running; step=active; error_code=; retriable=false; next_action=no-action
      if [ "$stale" = true ]; then status=failed; step=stale; error_code=remote_state_lock_stale; retriable=true; next_action=manual-review; fi
      updated_at="$last_heartbeat"; [ -n "$updated_at" ] || updated_at="$started_at"
      printf '{"id":"mutation-lock","status":"%s","phase":"remote-state-lock","step":"%s","updatedAt":%s,"stateBackend":"ssh-pglite","dataRoot":%s,"lockPath":%s,"owner":%s,"correlationId":%s,"startedAt":%s,"lastHeartbeatAt":%s,"staleAfterSeconds":%s,"lockAgeSeconds":%s,"stale":%s,"retriable":%s,"nextAction":"%s"' "$status" "$step" "$(json_string "$updated_at")" "$data_root_json" "$(json_string "$lock_dir")" "$(json_string "$owner")" "$(json_string "$correlation_id")" "$(json_string "$started_at")" "$(json_string "$last_heartbeat")" "$(json_number "$recorded_stale_after")" "$(json_number "$lock_age_seconds")" "$stale" "$retriable" "$next_action"
      if [ -n "$error_code" ]; then printf ',"errorCode":"%s","errorCategory":"infra"' "$error_code"; fi
      printf '}\\n'
    else
      printf '{"id":"mutation-lock","status":"succeeded","phase":"remote-state-lock","step":"unlocked","updatedAt":%s,"stateBackend":"ssh-pglite","dataRoot":%s,"stale":false}\\n' "$(json_string "$(date -u +"%Y-%m-%dT%H:%M:%SZ")")" "$data_root_json"
    fi
    count=0; for file in "$data_root"/journals/*.json; do [ "$count" -lt "$limit" ] || break; [ -f "$file" ] || continue; emit_file "$file" "remote-state-migration" "journal" "migration:$(basename "$file" .json)"; count=$((count + 1)); done
    count=0; for file in "$data_root"/backups/*; do [ "$count" -lt "$limit" ] || break; [ -e "$file" ] || continue; emit_file "$file" "remote-state-backup" "backup" "backup:$(basename "$file")"; count=$((count + 1)); done
    count=0; for file in "$data_root"/recovery/*.json "$data_root"/locks/recovered/*/recovered.json; do [ "$count" -lt "$limit" ] || break; [ -f "$file" ] || continue; emit_file "$file" "remote-state-recovery" "marker" "recovery:$(basename "$(dirname "$file")")-$(basename "$file" .json)"; count=$((count + 1)); done
"
`;
